[gd_scene load_steps=2 format=3 uid="uid://dy3ngjo0bby53"]

[ext_resource type="Script" uid="uid://c8lqriujcidoq" path="res://PauseMenu/pause_menu.gd" id="1_hdmo1"]

[node name="pauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("1_hdmo1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 286.0
offset_bottom = 656.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0

[node name="charBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Character"

[node name="invBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="questBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Log"

[node name="saveBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="loadBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="settingsBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quitBTN" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/charBTN" to="." method="onChar"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/invBTN" to="." method="onInv"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/questBTN" to="." method="onQuest"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/saveBTN" to="." method="onSave"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/loadBTN" to="." method="onLoad"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/settingsBTN" to="." method="onSet"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quitBTN" to="." method="onQuit"]
